fix: Railway ses bağlantısını düzelt (1/11)